feat: Add Toolbar for Staff in Sidebar (Contains logout button and link to Staff profile page)
- Added Staff Toolbar (displays Sign Out button and Staff name) in sidebar.jsx
- Further styled Staff Account profile page and Add Staff page
- Fixed some styling in User+Staff Account management pages
- Removed Staffhome page from App (When logged in, should be directed to dashboard)

--- a/client/src/style/staffaccounts.css
+++ b/client/src/style/staffaccounts.css
@@ -2,23 +2,18 @@
 .staffaccountslink{
     text-decoration: none;
     color: black;
-    font-weight: bold;
+    font-weight: normal;
     text-align: left;
-    margin-bottom: 1rem;
     display: block;
     transition: all 0.3s;
 }
 .staffaccountslink:hover {
-  color: #19682c;
+  color: grey;
   text-decoration: underline;
+  opacity: 0.7;
 }
 
 /* Staff Account Profile Page */
-/* .account-field {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1rem;
-} */
 .account-field {
     display: flex;
     font-weight: normal;
