--- a/Client/src/style/rewards/rewards.css
+++ b/Client/src/style/rewards/rewards.css
@@ -32,6 +32,37 @@
     font-size: 50px;
 }
 
+/* banner FOR REWARD */
+.rewardbanner {
+    position: relative;
+    width: 1688.4px;
+    height: 379.6px; /* Fixed height for the banner */
+    text-align: center;
+    margin-bottom: 50px;
+    overflow: hidden; /* Hides any overflowed parts of the image */
+}
+
+.rewardbanner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the image covers the entire container */
+}
+
+/* banner for ABOUT US */
+.aboutbanner {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 50px;
+    overflow: hidden; /* Hides any overflowed parts of the image */
+}
+
+.aboutbanner img {
+    width: 100%;
+    height: 110%;
+    object-fit: cover; /* Ensures the image covers the entire container */
+}
+
 /* greenreward */
 .greenreward {
     margin-bottom: 40px;
@@ -61,11 +92,6 @@ h1 {
     border-radius: 15px;
     border: none;
     margin-top: 20px;
-}
-
-.signupbutton a {
-    color: white;
-    text-decoration: none;
 }
 
 .greenreward .signupbutton:hover {
@@ -106,7 +132,7 @@ h1 {
 
 .rewards p {
     text-align: center;
-    width: 700px;
+    width: 850px;
     margin: auto;
     padding-top: 50px;
 }
@@ -132,31 +158,7 @@ h1 {
 }
 
 /* products */
-.rewards .products {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    flex-wrap: nowrap;
-    /* Ensures items stay in a single row */
-    margin-left: 10px;
-    margin-right: 10px;
-    width: 100%;
-    /* Ensures the products span the full width */
-}
 
-.rewards .product-item {
-    flex: 0 0 auto;
-    box-sizing: border-box;
-    margin-right: -300px;
-    /* Adjust spacing between items */
-    margin-top: 20px;
-    text-align: center;
-}
-
-.rewards .product-item:last-child {
-    margin-right: 0;
-    /* Remove margin from last item to avoid extra space */
-}
 
 .rewards .product-item img {
     width: 200px;
@@ -166,19 +168,17 @@ h1 {
     margin: auto;
     border: 5px solid #14772B;
     border-radius: 15px;
-    margin-left: 100px;
-}
-
-.rewards .product-item p {
-    margin-top: -30px;
-    margin-left: -100px;
+    margin-left: 175px;
 }
 
 .rewards .product-item h2 {
-    margin-left: -70px;
-}
+    margin-top: 30px;
+} 
+
 
 .rewards .product-item .leaves {
+    margin-top: -20px;
+    margin-bottom: 20px;
     margin-left: -140px;
 }
 
