Fixed bugs and styling
- Added stepper for reset password pages
- Set verification code expiration to 10 minutes
- Ensured booking pages are not accessible to guest users by checking for token in localstorage

--- a/client/src/style/loginandregister.css
+++ b/client/src/style/loginandregister.css
@@ -54,3 +54,13 @@
   color: #19682c;
   text-decoration: underline;
 }
+.login-register-forms-stepper {
+  margin-top: 3rem;
+  margin-bottom: 2.5rem;
+  width: 60%;
+  /* put the stepper in the center */
+  margin-left: auto;
+  margin-right: auto;
+
+
+}
