feat: Update Password and Reset Password for Staff members
- Additional Styling on Staff account management + staff profile pages +
- Added Update Password form in staff profile page to update password freely

--- a/client/src/style/staffaccounts.css
+++ b/client/src/style/staffaccounts.css
@@ -31,7 +31,7 @@
 }
 
 @media (max-width: 960px) {
-    #staff-account-profile-box {
+    .staff-account-profile-box {
         margin-left: 0;
     }
     .searchbar {
@@ -39,7 +39,7 @@
     }
 }
 @media (min-width: 961px) {
-    #staff-account-profile-box {
+    .staff-account-profile-box {
         margin-left: 250px;
     }
 }
