--- a/Client/src/style/rewards/collectionproduct.css
+++ b/Client/src/style/rewards/collectionproduct.css
@@ -36,7 +36,7 @@
 } */
 
 @media (max-width: 960px) {
-    .search {
+    .collectionitem, .search {
         margin-left: -240px !important;
     }
 
