--- a/Client/src/style/rewards/rewardsprofile.css
+++ b/Client/src/style/rewards/rewardsprofile.css
@@ -9,9 +9,9 @@ hr {
 
 .summary-rectangle {
   width: 100%;
-  height: 300px; /* Adjust the height as needed */
-  background-color: #91E1A3; /* Grey color */
-  margin-bottom: 50px; /* Space between the rectangle and the table */
+  height: 300px;
+  background-color: #91E1A3;
+  margin-bottom: 50px;
 }
 
 /* leaf points */
@@ -40,7 +40,7 @@ hr {
 
 /* table */
 .table-container {
-  margin-top: 50px; /* change this later */
+  margin-top: 50px;
   margin-left: 0px !important;
 }
 
