--- a/Client/src/style/rewards/redemptionshop.css
+++ b/Client/src/style/rewards/redemptionshop.css
@@ -68,7 +68,6 @@
 
     .product-item h2 {
         font-size: 2.5vw;
-        padding-left: 230px;
     }
 
     .product-item p {
@@ -82,6 +81,11 @@
     .shop h1 {
         width: 90%;
         font-size: 6vw;
+        margin-top: 20px;
+    }
+
+    .shop h1 {
+        margin-bottom: 10px;
     }
 
     .products {
@@ -102,7 +106,6 @@
 
     .product-item h2 {
         font-size: 4vw;
-        padding-left: 230px;
     }
 
     .product-item p {
