--- a/Client/src/style/rewards/collectionproduct.css
+++ b/Client/src/style/rewards/collectionproduct.css
@@ -26,6 +26,16 @@
     width: calc(100% - 250px);
 }
 
+.savebutton,
+.cancelbutton {
+    margin-top: -10px !important;
+    margin-bottom: 10px !important;
+}
+
+.cancelbutton {
+    margin-right: 20px !important;
+}
+
 @media (max-width: 960px) {
     .collectionitem, .search {
         margin-left: -240px !important;
