--- a/Client/src/style/rewards/rewardproduct.css
+++ b/Client/src/style/rewards/rewardproduct.css
@@ -5,7 +5,7 @@
 
 /* table */
 .data-grid {
-  width: 70% !important;
+  width: 75% !important;
   margin-left: 250px !important;
   margin-top: 30px !important;
   height: 400px !important;
@@ -31,6 +31,11 @@
 
 .addbutton,
 .savebutton {
+  margin-top: 20px !important;
+  margin-left: 120px !important;
+}
+
+.savechangesbutton {
   margin-top: 20px !important;
   margin-left: 70px !important;
 }
