fixed some overwriting of styling & add columns
fixed overwriting of button styling, added leaf_points column in useraccount (backend), changed disabled field to black,

--- a/Client/src/style/rewards/collectionproduct.css
+++ b/Client/src/style/rewards/collectionproduct.css
@@ -51,4 +51,12 @@
     .rewardshopback .table-container {
         width: 140% !important;
     }
+
+    .itemfilter, .filtercollection {
+        margin-top: 80px !important;
+    }
+
+    .filtercollection {
+        margin-left: -320px !important;
+    }
 }
