--- a/client/src/style/staffaccounts.css
+++ b/client/src/style/staffaccounts.css
@@ -1,5 +1,5 @@
 /* Back to Staff page in AddStaff link */
-.staffaccountslink{
+.staffaccountslink {
     text-decoration: none;
     color: black;
     font-weight: normal;
@@ -7,10 +7,11 @@
     display: block;
     transition: all 0.3s;
 }
+
 .staffaccountslink:hover {
-  color: grey;
-  text-decoration: underline;
-  opacity: 0.7;
+    color: grey;
+    text-decoration: underline;
+    opacity: 0.7;
 }
 
 /* Staff Account Profile Page */
@@ -23,21 +24,34 @@
     padding: 0.5rem 0;
     border-bottom: 1px solid #e0e0e0;
 }
+
 .account-field:last-child {
     border-bottom: none;
 }
+
 .account-details {
     font-weight: bold;
+}
+
+/* buttons */
+.cancelbutton {
+    background-color: red !important;
+    margin-top: 10px !important;
+    top: 10px !important;
+    margin-left: 10px !important;
+    left: 20px !important;
 }
 
 @media (max-width: 960px) {
     .staff-account-profile-box {
         margin-left: 0;
     }
+
     .searchbar {
         max-width: 200px;
     }
 }
+
 @media (min-width: 961px) {
     .staff-account-profile-box {
         margin-left: 250px;
