--- a/Client/src/style/eventtable.css
+++ b/Client/src/style/eventtable.css
@@ -1,4 +1,3 @@
-/* Container for event list */
 .event-list-container {
     width: 80%;
     max-width: 1300px;
@@ -6,7 +5,8 @@
     margin-top: -25px;
     margin-bottom: 15px;
     padding: 20px;
-overflow-x: hidden; /* Prevent horizontal scrolling */
+    overflow-x: hidden;
+    /* Prevent horizontal scrolling */
 }
 
 h2 {
@@ -48,7 +48,7 @@ h2 {
 
 input[type="text"] {
     border: none !important;
-    
+
 }
 
 .css-1jy569b-MuiFormLabel-root-MuiInputLabel-root {
@@ -103,21 +103,25 @@ input[type="text"] {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 90vw;  /* Adjust maximum width as needed */
-    max-height: 90vh; /* Adjust maximum height as needed */
+    max-width: 90vw;
+    max-height: 90vh;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    overflow: hidden; /* Ensure content does not overflow */
+    overflow: hidden;
+    /* Ensure content does not overflow */
 }
 
 .zoom-modal-box img {
     max-width: 100%;
     max-height: 100%;
-    width: auto;  /* Maintain aspect ratio */
-    height: auto; /* Maintain aspect ratio */
+    width: auto;
+    /* Maintain aspect ratio */
+    height: auto;
+    /* Maintain aspect ratio */
 }
+
 /* Ensure proper spacing between elements in the modal */
 .modal-box {
     padding: 20px;
@@ -126,20 +130,20 @@ input[type="text"] {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-/* Style for the file upload button */
+
 .upload-button-container {
     margin-bottom: 12px;
-  
+
 }
 
 /* Ensure the submit button is positioned below the upload button */
 .actions-container {
     display: flex;
     flex-direction: column;
-    gap: 16px; /* Adds spacing between the upload and submit buttons */
+    gap: 16px;
+    /* Adds spacing between the upload and submit buttons */
 }
 
-/* Style for error messages */
 .error-text {
     color: red;
     font-size: 0.875rem;
@@ -201,9 +205,11 @@ input[type="text"] {
     display: block;
     width: 100%;
 }
+
 .zoomModalBox {
     position: relative;
 }
+
 .editcloseBtn {
     position: absolute;
     top: 10px;
@@ -214,8 +220,10 @@ input[type="text"] {
     cursor: pointer;
     color: red;
     transition: color 0.3s, transform 0.3s;
-    z-index: 2; /* Ensure the close button is above the image */
+    z-index: 2;
+    /* Ensure the close button is above the image */
 }
+
 .editcloseBtn:hover {
     color: black;
     transform: scale(1.2);
@@ -231,22 +239,26 @@ input[type="text"] {
     cursor: pointer;
     color: red;
     transition: color 0.3s, transform 0.3s;
-    z-index: 2; /* Ensure the close button is above the image */
+    z-index: 2;
+    /* Ensure the close button is above the image */
 }
 
 .closeBtn:hover {
     color: black;
     transform: scale(1.2);
 }
+
 .event-data-grid-container {
     height: 400px;
     width: 121.5%;
 }
+
 @media (min-width: 600px) {
     .card {
         max-width: 300px;
     }
-.addbtn {
+
+    .addbtn {
         margin-left: 0 !important;
         margin-right: 0 !important;
         width: 20%;
@@ -309,7 +321,8 @@ input[type="text"] {
         padding: 10px;
         overflow-x: auto;
     }
- .addbtn {
+
+    .addbtn {
         margin-left: 0 !important;
         margin-right: 0 !important;
         width: 20%;
@@ -323,12 +336,12 @@ input[type="text"] {
     .event-list-container {
         width: 120% !important;
     }
-    
+
     .event-table-content {
         padding: 0 10px;
         overflow-x: auto;
     }
-    
+
     .filter-section {
         flex-direction: column;
         align-items: flex-start;
@@ -338,8 +351,9 @@ input[type="text"] {
         margin-right: 0;
         margin-bottom: 10px;
     }
-    
-    .modal-box, .zoom-modal-box {
+
+    .modal-box,
+    .zoom-modal-box {
         width: 90%;
         max-width: 500px;
     }
